corrections sur les z-index
git-svn-id: svn+ssh://svn.projects.openwide.fr/svnroot/owsi-tools/trunk/owsi-core@2986 d3474844-eb8e-4abc-b058-2b321fed648b

--- a/owsi-core/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/markup/html/template/css/bootstrap3/bootstrap/override/variables.less
+++ b/owsi-core/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/markup/html/template/css/bootstrap3/bootstrap/override/variables.less
@@ -38,10 +38,10 @@
 @zindex-dropdown:				1000;
 @zindex-popover:				110; // originellement 1010 dans BS3
 @zindex-tooltip:				1030;
-@zindex-navbar-fixed:			1030;
-@zindex-modal-backdrop:			1039;
-@zindex-modal-background:		1040;
-@zindex-modal:					1050;
+@zindex-navbar-fixed:			1010; // originellement 1030 dans BS3
+@zindex-modal-backdrop:			1019;
+@zindex-modal-background:		1020;
+@zindex-modal:					1029;
 @zindex-page-popover:			30;		// popover dans la page / donc sous la modale
 @zindex-alert-global:			1000;	// global floating alert panel
 @zindex-alert-global-close:		1001;	// global floating alert panel close button
